css: fix p word wrap

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -261,6 +261,7 @@ hr.banner-divider {
 
 .content p {
     font-size: 1.2rem;
+    word-break: break-word;
 }
 
 .content h1 {
